--- a/app/enseignant/pages/evaluations/evaluation-create.html
+++ b/app/enseignant/pages/evaluations/evaluation-create.html
@@ -1,5 +1,6 @@
 <div id="page-wrapper">
 
+<button ui-sref="enseignant.mesEvaluations">Voir mes évaluations</button>
 
     <div class="row">
         <div class="col-lg-12">
