--- a/app/enseignant/pages/evaluations/voir_evaluation.html
+++ b/app/enseignant/pages/evaluations/voir_evaluation.html
@@ -1,9 +1,7 @@
 <div id="page-wrapper">
-
-
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">{{evaluation.nom}}</h1>
+            <h1 class="page-header">{{currentEvaluation.nom}}</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
