--- a/app/eleve/pages/main/main.html
+++ b/app/eleve/pages/main/main.html
@@ -29,7 +29,7 @@
 
         <!-- /.row -->
         <div class="row">
-
+            <!-- .panel-heading -->
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -136,7 +136,7 @@
                     <!-- /.panel-heading -->
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-sm-6 col-md-4" ng-repeat="eval in eleveCo.evalsAFaire">
+                            <div class="col-sm-6 col-md-4" ng-repeat="eval in evalsAFaire">
                                 <div class="thumbnail">
                                     <img data-holder-rendered="true" src="{{eval.cours.image}}"
                                          style="height: 200px; width: 90%; display: block;" alt="{{eval.cours.nom}}">
@@ -156,103 +156,6 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <div class="col-md-3 col-sm-6 hero-feature">
-                                <div class="thumbnail">
-                                    <img src="http://placehold.it/800x500" alt="">
-                                    <div class="caption">
-                                        <h3>Cours 2</h3>
-                                        <p>3 évaluations à faire avant le <strong>10/10/2016</strong></p>
-                                        <p>
-                                        <div class="dropdown">
-                                            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                                <span class="">Liste</span>
-                                                <span class="caret"></span>
-                                            </button>
-                                            <ul class="dropdown-menu dropdown-menu-left" aria-labelledby="dropdownMenu1">
-                                                <li><a ui-sref="eleve.evaluations.corriger">1</a></li>
-                                                <li><a ui-sref="eleve.evaluations.corriger">2</a></li>
-                                                <li><a ui-sref="eleve.evaluations.corriger">3</a></li>
-                                                <li><a ui-sref="eleve.evaluations.corriger">4</a></li>
-                                            </ul>
-                                        </div>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-md-3 col-sm-6 hero-feature">
-                                <div class="thumbnail">
-                                    <img src="http://placehold.it/800x500" alt="">
-                                    <div class="caption">
-                                        <h3>Cours 3</h3>
-                                        <p>3 évaluations à faire avant le 10/10/2016</p>
-                                        <p>
-                                        <div class="dropdown">
-                                            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                                <span class="">Liste</span>
-                                                <span class="caret"></span>
-                                            </button>
-                                            <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
-                                                <li><a href="">1</a></li>
-                                                <li><a href="">2</a></li>
-                                                <li><a href="">3</a></li>
-                                                <li><a href="">4</a></li>
-                                            </ul>
-                                        </div>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-md-3 col-sm-6 hero-feature">
-                                <div class="thumbnail">
-                                    <img src="http://placehold.it/800x500" alt="">
-                                    <div class="caption">
-                                        <h3>Feature Label</h3>
-                                        <p>3 évaluations à faire avant le 10/10/2016</p>
-                                        <p>
-                                        <div class="dropdown">
-                                            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                                <span class="">Liste</span>
-                                                <span class="caret"></span>
-                                            </button>
-                                            <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
-                                                <li><a href="">1</a></li>
-                                                <li><a href="">2</a></li>
-                                                <li><a href="">3</a></li>
-                                                <li><a href="">4</a></li>
-                                            </ul>
-                                        </div>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-md-3 col-sm-6 hero-feature">
-                                <div class="thumbnail">
-                                    <img src="http://placehold.it/800x500" alt="">
-                                    <div class="caption">
-                                        <h3>Feature Label</h3>
-                                        <p>3 évaluations à faire avant le 10/10/2016</p>
-                                        <p>
-                                        <div class="dropdown">
-                                            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                                <span class="">Liste</span>
-                                                <span class="caret"></span>
-                                            </button>
-                                            <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
-                                                <li><a href="">1</a></li>
-                                                <li><a href="">2</a></li>
-                                                <li><a href="">3</a></li>
-                                                <li><a href="">4</a></li>
-                                            </ul>
-                                        </div>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-
                         </div>
                     </div>
                     <!-- /.panel-body -->
