--- a/app/enseignant/pages/evaluations/pivottable.html
+++ b/app/enseignant/pages/evaluations/pivottable.html
@@ -42,6 +42,8 @@
                     <div id="container" style="height: 400px"></div>
                     <div id="drag"></div>
                     <div id="drop"></div>
+                    <button class="btn btn-primary pull-right">Sauvegarder >></button>
+
                 </div>
                 <!-- /.panel-body -->
                 <div class="panel-footer">
