--- a/app/eleve/pages/eleve.html
+++ b/app/eleve/pages/eleve.html
@@ -44,7 +44,7 @@
                     <!-- /input-group -->
                 </li>
                 <li>
-                    <a class="navbarEnseignantText" ui-sref="eleve"><i class="fa fa-home fa-fw"></i> Dashboard</a>
+                    <a class="navbarEnseignantText" ui-sref="eleve"><i class="fa fa-home fa-fw"></i> Tableau de Bord</a>
                 </li>
                 <li>
                     <a class="navbarEnseignantText" ui-sref="eleve.cours"><i class="fa fa-book fa-fw"></i> Mes Cours</a>
