--- a/app/eleve/pages/evaluations/evaluations.html
+++ b/app/eleve/pages/evaluations/evaluations.html
@@ -19,7 +19,7 @@
                         <div class="panel-body">
                             <div class="col-sm-6 col-md-5" ng-repeat="eval in copiesARendre">
                                 <div class="thumbnail">
-                                    <img data-holder-rendered="true" src="{{eval.cours.image}}"
+                                    <img data-holder-rendered="true" src="http://placehold.it/800x500"
                                          style="height: 200px; width: 90%; display: block;" alt="{{eval.cours.nom}}">
                                     <div class="caption">
                                         <h3 style="max-height:55px; overflow:hidden" data-toggle="popover" title="{{eval.cours.nom}}">{{eval.cours.nom}}</h3>
