--- a/app/eleve/pages/cours/cours.html
+++ b/app/eleve/pages/cours/cours.html
@@ -4,7 +4,7 @@
         <!-- Page Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Mes cours
+                <h1 class="page-header">Mes Cours
                 </h1>
             </div>
         </div>
