--- a/app/eleve/pages/cours/cours.html
+++ b/app/eleve/pages/cours/cours.html
@@ -14,9 +14,7 @@
         <div class="row" ng-repeat="cours in MesCours">
             <hr>
             <div class="col-md-4">
-                <a href="#">
-                    <img ng-src="{{cours.image}}" alt="">
-                </a>
+                    <img ng-src="{{cours.image}}" alt="" class="img-thumbnail">
             </div>
             <div class="col-md-8">
                 <h3>{{cours.nom}}</h3>
