--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <script src="app/bower_components/pdfjs-dist/build/pdf.js"></script>
     <script src="app/bower_components/angular-pdf/dist/angular-pdf.js"></script>
     <script src="app/bower_components/checklist-model/checklist-model.js"></script>
+    <script src="node_modules/angular-local-storage/dist/angular-local-storage.min.js"></script>
+
 
     <script src="https://code.highcharts.com/highcharts.js"></script>
 
@@ -72,6 +74,8 @@
     <script src="app/enseignant/pages/evaluations/evaluations_controller.js"></script>
     <script src="app/enseignant/pages/cours/cours_controller.js"></script>
     <script src="app/enseignant/pages/enseignant_controller.js"></script>
+    <script src="app/enseignant/pages/evaluations/evaluations_get_controller.js"></script>
+    <script src="app/enseignant/pages/evaluations/section_controller.js"></script>
 
     <script src="app/eleve/pages/eleve_controller.js"></script>
     <script src="app/eleve/pages/cours/cours_eleve_controller.js"></script>
