--- a/app/enseignant/pages/evaluations/evaluation-create.html
+++ b/app/enseignant/pages/evaluations/evaluation-create.html
@@ -1,7 +1,5 @@
 <div id="page-wrapper">
 
-<button ui-sref="enseignant.mesEvaluations">Voir mes évaluations</button>
-
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">Créer une évaluation</h1>
@@ -12,8 +10,8 @@
 
     <ul class="nav nav-pills" id="myTab">
         <!-- <ul class="nav nav-pills" id="myTab"> -->
-        <li class="active"><a data-toggle="tab" data-target="#menu01">Étape 1/3</a></li>
-        <li><a data-toggle="tab" data-target="#menu02">Étape 2/3</a></li>
+        <li id="onglet1" class="active"><a data-toggle="tab" data-target="#menu01">Étape 1/3</a></li>
+        <li id="onglet2" ><a data-toggle="tab" data-target="#menu02">Étape 2/3</a></li>
         <li><a data-toggle="tab" data-target="#menu03">Étape 3/3</a></li>
     </ul>
 
@@ -564,18 +562,18 @@
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
-                            <div ng-repeat="section in newEval.sectionList | orderBy : 'ordre'">
+                            <div ng-repeat="section in sectionList | orderBy : 'ordre'">
 
-                                <div class="panel panel-default">
+                                <div class="panel panel-default" ng-controller="SectionsController" ng-init="section=section">
                                 <div class="panel-heading">
                                     {{section.ordre+"- "+section.titre}}&nbsp;/{{section.points}}
                                     <a class="btn btn-danger btn-circle-micro pull-right" data-toggle="modal" data-target="#modalDeleteSection" ng-click="deleteSection(section)"><i class="fa fa-times"></i>
                                     </a>
                                     <a class="btn btn-primary btn-circle-micro pull-right" href="javascript:$('#myModal .modal-body').load('remote.html',function(e){$('#myModal').modal('show');});"><i class="fa fa-list"></i>
                                     </a>
-                                    <a class="btn btn-success btn-circle-micro pull-right" ng-click="sectionUp(section.ordre, sectionList)"><i class="fa fa-angle-up"></i>
+                                    <a class="btn btn-success btn-circle-micro pull-right" ng-click="changeOrdreSectionUp"><i class="fa fa-angle-up"></i>
                                     </a>
-                                    <a class="btn btn-success btn-circle-micro pull-right" ng-click="sectionDown(section.ordre, sectionList)"><i class="fa fa-angle-down"></i>
+                                    <a class="btn btn-success btn-circle-micro pull-right" ng-click="changeOrdreSectionDown"><i class="fa fa-angle-down"></i>
                                     </a>
                                 </div>
                                 <!-- /.panel-heading -->
@@ -592,22 +590,22 @@
                                             <tr><th></th><th>Critère</th><th></th></tr>
                                             </thead>
                                             <tbody>
-                                            <tr ng-repeat-start="critere in section.critereList | orderBy : 'ordre'">
-                                                <td>
-                                                    <button class="btn btn-primary btn-circle-micro" ng-if="critere.expanded" ng-click="critere.expanded = false"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
-                                                    <button class="btn btn-primary btn-circle-micro" ng-if="!critere.expanded" ng-click="critere.expanded = true"><i class="fa fa-arrow-down" aria-hidden="true"></i></button>
-                                                </td>
-                                                <td>Critère n°{{critere.ordre}}: {{critere.type}}</td>
-                                                <td>
-                                                    <a class="btn btn-success btn-circle-nano pull-right" ng-click="sectionUp(critere.ordre, section.criteres)"><i class="fa fa-angle-up"></i></a>
-                                                    <a class="btn btn-success btn-circle-nano pull-right" ng-click="sectionDown(critere.ordre, section.criteres)"><i class="fa fa-angle-down"></i></a>
-                                                </td>
+                                            <tr ng-repeat-start="critere in critereList | orderBy : 'ordre'">
+                                                            <td>
+                                                            <button class="btn btn-primary btn-circle-micro" ng-if="critere.expanded" ng-click="critere.expanded = false"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
+                                                            <button class="btn btn-primary btn-circle-micro" ng-if="!critere.expanded" ng-click="critere.expanded = true"><i class="fa fa-arrow-down" aria-hidden="true"></i></button>
+                                                        </td>
+                                                        <td>Critère n°{{critere.ordre}}: {{critere.type.type}}</td>
+                                                        <td>
+                                                            <a class="btn btn-success btn-circle-nano pull-right" ng-click="changeOrdreCritereUp(critere)"><i class="fa fa-angle-up"></i></a>
+                                                            <a class="btn btn-success btn-circle-nano pull-right" ng-click="changeOrdreCritereDown(critere)"><i class="fa fa-angle-down"></i></a>
+                                                        </td>
                                             </tr>
 
                                             <tr ng-if="critere.expanded" ng-repeat-end="">
                                                 <td colspan="99">
                                                     <p>Description: {{critere.description}}</p>
-                                                    <p ng-show="critere.type!='commentaire'">Nombre de points: {{critere.points}}</p>
+                                                    <p ng-show="critere.type!='commentaire'">Nombre de points: {{critere.points_max}}</p>
                                                     <p ng-show="critere.type=='jugement'">Précision : {{critere.precision}}</p>
                                                     <p>
                                                     <div class="panel panel-default" ng-controller="HighChartsController">
@@ -632,7 +630,6 @@
                                     </div>
                                     <br><br>
                                     <button class="btn btn-primary" data-toggle="modal" data-target="#{{section.id}}">Ajouter un critère d'évaluation</button>
-                                </div>
                                 </div>
 
                                 <div id="{{section.id}}" class="modal fade" role="dialog">
@@ -687,11 +684,12 @@
 
                                             </div>
                                             <div class="modal-footer">
-                                                <button type="submit" class="btn btn-default" ng-click="addCritere(section, newCritere)" data-dismiss="modal">Ajouter</button>
+                                                <button type="submit" class="btn btn-default" ng-click="addCritere(newCritere)" data-dismiss="modal">Ajouter</button>
                                                 <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
                                             </div>
                                         </div>
-                                    </div>
+                                </div>
+                            </div>
                             </div>
                         </div>
                     </div>
@@ -699,7 +697,7 @@
 
                 <button class="btn btn-primary center-block" data-toggle="modal" data-target="#myModal">Ajouter une section</button>
 
-                <button type="submit" class="btn btn-primary pull-right" data-toggle="tab" data-target="#menu03">Etape suivante</button>
+                <button type="submit" class="btn btn-primary pull-right" data-toggle="tab" data-target="#menu03" >Etape suivante</button>
 
                 <!-- Modal content-->
                 <div id="myModal" class="modal fade" role="dialog">
